##### version 1.3.0

200130 Rick Gelhausen & Florian Eggenhofer
 + integration of deepribo
 + refactoring of scripts folder
 + added pseudogene read counting

##### version 1.2.0

200122 Rick Gelhausen & Florian Eggenhofer
 + updated reparation to v1.0.9
 + added differential expression analysis with Riborex and Xtail
 + added TIS support to generate_excel.py
 + standardized output annotation to GFF3 format
 + updated HRIBO Manual

##### version 1.1.0

190822 Rick Gelhausen & Florian Eggenhofer
 + added paired-end support
  + paired-end mapping (currently no tools allowing this exist)
  + combined paired-end mapping
  + improved samples.xlsx (for paired end)
  + improved count_tables (rounding numbers to 2 floating points)
  + fix for annotation generation

##### version 1.0.0

190808 Rick Gelhausen & Florian Eggenhofer
 + initial commit